# VECTORIA

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  TRUTH.md  pyproject.toml
.github/workflows/: arm64.yml  packaging.yml  tooling.yml  x86_64.yml
asm/: README.md
asm/arm64/: add_neon.S  div_neon.S  gemm_neon.S  mul_neon.S  reduce_max_neon.S  reduce_sum_neon.S  relu_neon.S  sub_neon.S
asm/x86_64/: add_avx2.S  div_avx2.S  gemm_avx2.S  mul_avx2.S  reduce_max_avx2.S  reduce_sum_avx2.S  relu_avx2.S  sub_avx2.S
benchmarks/: README.md  elementwise_bench.cpp  gemm_bench.cpp  reduction_bench.cpp
core/: README.md
core/src/: c_api.cpp  capabilities.cpp  engine.cpp  memory.cpp  trace.cpp
core/tests/: test_attention.cpp  test_concatenation.cpp  test_coreml_equivalence.cpp  test_cross_arch_equivalence.cpp  (+18 more)
docs/: architecture.md  attention.md  benchmarks.md  ci.md  ci_policy.md  concatenation.md  coreml_lowering.md  crossentropy.md  deployment.md  deployment_contract.md  determinism.md  graph_semantics.md  installation.md  ir.md  kernel_certification.md  kernels.md  layernorm.md  logsoftmax.md  memory_model.md  multi_head_attention.md  observability.md  optimization_policy.md  performance_model.md  phase6_audit.md  python_api.md  release_policy.md  reshape.md  simd_x86_64.md  stable_softmax.md  swift_parity.md  testing.md  tooling.md  trace_schema.md  transformer_encoder.md  transpose.md
manuscript/: figs.py  generate_figures.py  paper.bib  paper.md  paper.yml
python/: README.md
release/: README.md
swift/: Package.swift  README.md
(+105 files in other folders)
