[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectoria"
version = "1.3.1"
description = "Deterministic, Inspectable, High-Performance Computational Kernels"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MD. Arshad", email = "arshad@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/Sulkysubject37/VECTORIA"

[project.scripts]
vectoria-trace = "vectoria.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["vectoria", "vectoria.tools"]

[tool.setuptools.package-data]
vectoria = ["libvectoria.dylib", "libvectoria.so"]
